# Teepon

./: .env.example  README.md  docker-compose.yml
Socket_Server/: README.md  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  app.py  config.py  docker-entrypoint.sh  extensions.py  models.py  pyproject.toml  routes.py  url_handler.py  wsgi.py
backend/embeddings/: embedding.py
frontend/: .env.example  README.md
frontend/API/: Api.js
frontend/app/: layout.js  page.jsx
frontend/app/chat/: page.jsx
frontend/app/chat/[chatId]/: chat.module.css  page.jsx
frontend/app/chat/new/: page.jsx
frontend/app/profile/: page.jsx
frontend/components/: ChatLayout.jsx  ChatWindow.jsx  Loader.js  SubmitAIMessage.jsx
frontend/components/Recommendation/: Recommendation.jsx
frontend/components/Sidebar/: Sidebar.jsx
frontend/services/: AddToCalendar.jsx  socketService.js
