[tool.poetry]
name = "teepon"
version = "0.1.0"
description = "TiDB hackaton"
authors = ["Teepon Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
python-dotenv = "*"
flask = "*"
pymongo = "*"

pyyaml="*"
spotipy="*"
langchain="*"
langchain-community="*"
langchain-openai="*"
colorama="*"
tiktoken="*"
openai="*"
pymysql="*"
flask_migrate="*"
opencage="*"
gunicorn="*"
sqlalchemy="*"
tidb-vector="*"
embedchain="0.1.120"

exceptiongroup = "*"
async-timeout = "*"
poetry="*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pytest = "*"
pytest-watch = "*"
model-bakery = "*"
locust = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

